Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36499

PlaceHolderText doesn't appear in RTL

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.8.0
    • 5.2.0
    • Widgets: Layout
    • None
    • Linux, Windows, Mac
    • 57a1224eb3003468b2851635e3ad4dae760c14b8 (qtbase/dev, 17.2.2016)

    Description

      PlaceHolderText in QLineEdit always appears in LTR even if you set the layout direction of the parent container is RightToLeft or if you set RightToLeft for whole application!

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              dcape Dan Cape
              mbnoimi Muhammad Bashir Al-Noimi
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes